# Go-MiniMax

./: .gitignore  LICENSE.MD  README.MD
BaseGo/: AUTHORS  CMakeLists.txt  main.cpp
BaseGo/core/: CMakeLists.txt  MiniMax.cpp  MiniMax.h  core.cpp  core.h  info.h
BaseGo/core/Node/: MaxNode.cpp  MaxNode.h  MinNode.cpp  MinNode.h  Node.cpp  Node.h  NodeInfo.cpp  NodeInfo.h
BaseGo/engine/: CMakeLists.txt  board.h  clock.cpp  clock.h
BaseGo/gtp/: CMakeLists.txt  gtp.h  play_gtp.cpp
BaseGo/sgf/: CMakeLists.txt  sgfnode.cpp
BaseGo/utils/: CMakeLists.txt  config.h  gg_utils.cpp  gg_utils.h
gogui-1.4.9/windows/nsis/: install.nsis
